--- a/stylesheets/portal.css
+++ b/stylesheets/portal.css
@@ -1,12 +1,4 @@
 /* Set */
-.notice {
-    color: #f00;
-    font-size: 13px;
-    height: 31px;
-    line-height: 31px;
-    margin-right: 10px;
-}
-
 #portal-layer, #brand-layer {
     width: 100%;
     height: 100%;
@@ -955,7 +947,7 @@ span.sType {
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 4;
+    z-index: 30;
 }
 /* Dropdown Gray */
 #dropdown-portal-ch.on {
@@ -1107,6 +1099,8 @@ span.sType {
     border-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.05) rgba(0, 0, 0, 0.9);
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px rgba(0, 0, 0, 0.05), 0 1px 1px rgba(255,255,255,0.9);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px rgba(0, 0, 0, 0.05), 0 1px 1px rgba(255,255,255,0.9);
+}
+#store-category ul li.is-move:hover {
     cursor: move;
 }
 #store-category ul li span {
