update css from james

--- a/stylesheets/cms-component.css
+++ b/stylesheets/cms-component.css
@@ -274,7 +274,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   position: absolute;
   width: 0;
   height: 0;
-  bottom: 12px;
+  top: 12px;
   left: -7px;
   border-top: 10px solid transparent;
   border-right: 8px solid #ededed;
@@ -289,21 +289,21 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   margin-bottom: 0.5rem;
   white-space: nowrap;
 }
-/* line 216, ../sass/cms-component.sass */
+/* line 217, ../sass/cms-component.sass */
 .tooltip-wrap .tooltip-content-list li:last-child {
   margin-bottom: 0;
 }
-/* line 218, ../sass/cms-component.sass */
+/* line 219, ../sass/cms-component.sass */
 .tooltip-wrap .input-gray {
   height: auto;
 }
-/* line 221, ../sass/cms-component.sass */
+/* line 222, ../sass/cms-component.sass */
 .tooltip-wrap.show-top {
   bottom: calc(100% + 10px);
   right: 0;
   left: auto;
 }
-/* line 225, ../sass/cms-component.sass */
+/* line 226, ../sass/cms-component.sass */
 .tooltip-wrap.show-top:after {
   bottom: -16px;
   left: auto;
@@ -313,43 +313,44 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-left: 8px solid transparent;
 }
 
-/* line 234, ../sass/cms-component.sass */
+/* line 235, ../sass/cms-component.sass */
 .icon-question {
   background: transparent url("../images/icon_question.png") no-repeat 0 0;
   width: 16px;
   height: 16px;
   display: inline-block;
 }
-/* line 239, ../sass/cms-component.sass */
+/* line 240, ../sass/cms-component.sass */
 .icon-question.is-with-tooltip {
   position: relative;
 }
-/* line 241, ../sass/cms-component.sass */
+/* line 242, ../sass/cms-component.sass */
 .icon-question.is-with-tooltip .tooltip-wrap {
-  white-space: nowrap;
+  min-width: 25em;
+  max-width: 40em;
   left: 28px;
   top: -16px;
   color: #555;
 }
-/* line 247, ../sass/cms-component.sass */
+/* line 250, ../sass/cms-component.sass */
 .icon-question.is-with-tooltip:hover > .tooltip-wrap {
   display: block;
 }
 
-/* line 249, ../sass/cms-component.sass */
+/* line 252, ../sass/cms-component.sass */
 .icon-exclamation {
   background: transparent url("../images/icon_exclamation.png") no-repeat 0 10px;
   padding: 10px 20px;
 }
 
-/* line 257, ../sass/cms-component.sass */
+/* line 260, ../sass/cms-component.sass */
 .nav-tabs {
   overflow: hidden;
   *zoom: 1;
   position: relative;
   padding-bottom: 20px;
 }
-/* line 263, ../sass/cms-component.sass */
+/* line 266, ../sass/cms-component.sass */
 .nav-tabs:after {
   content: "";
   display: block;
@@ -365,12 +366,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   -webkit-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
 }
-/* line 277, ../sass/cms-component.sass */
+/* line 280, ../sass/cms-component.sass */
 .nav-tabs .tab-item {
   float: left;
   margin-bottom: -1px;
 }
-/* line 280, ../sass/cms-component.sass */
+/* line 283, ../sass/cms-component.sass */
 .nav-tabs .tab-item a {
   text-decoration: none;
   color: #555;
@@ -382,22 +383,22 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   padding: 8px 25px;
   background-color: #fff;
 }
-/* line 291, ../sass/cms-component.sass */
+/* line 294, ../sass/cms-component.sass */
 .nav-tabs .tab-item a:hover {
   color: #999;
 }
-/* line 294, ../sass/cms-component.sass */
+/* line 297, ../sass/cms-component.sass */
 .nav-tabs .tab-item.on a {
   background-color: #e2e2e2;
   border-bottom: 1px solid #e2e2e2;
   cursor: default;
 }
-/* line 298, ../sass/cms-component.sass */
+/* line 301, ../sass/cms-component.sass */
 .nav-tabs .tab-item.on a:hover {
   color: #555;
 }
 
-/* line 302, ../sass/cms-component.sass */
+/* line 305, ../sass/cms-component.sass */
 .func-btns .del {
   display: block;
   width: 22px;
@@ -408,17 +409,17 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   text-indent: -100000px;
   background-position: 0 -97px;
 }
-/* line 311, ../sass/cms-component.sass */
+/* line 314, ../sass/cms-component.sass */
 .func-btns .del:hover {
   background-position: -23px -97px;
 }
 
-/* line 314, ../sass/cms-component.sass */
+/* line 317, ../sass/cms-component.sass */
 .btn-item {
   display: inline-block;
 }
 
-/* line 318, ../sass/cms-component.sass */
+/* line 321, ../sass/cms-component.sass */
 .central-l {
   top: 50%;
   left: 50%;
@@ -428,24 +429,24 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   transform: translate3D(-50%, -50%, 0);
 }
 
-/* line 323, ../sass/cms-component.sass */
+/* line 326, ../sass/cms-component.sass */
 .fixed-l {
   position: fixed;
 }
 
-/* line 325, ../sass/cms-component.sass */
+/* line 328, ../sass/cms-component.sass */
 .align-center {
   text-align: center;
 }
 
-/* line 330, ../sass/cms-component.sass */
+/* line 333, ../sass/cms-component.sass */
 .progress {
   position: absolute;
   width: 100%;
   top: 0;
 }
 
-/* line 337, ../sass/cms-component.sass */
+/* line 340, ../sass/cms-component.sass */
 .progress-bar {
   float: left;
   width: 0;
@@ -462,7 +463,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   transition: width 0.6s ease;
 }
 
-/* line 353, ../sass/cms-component.sass */
+/* line 356, ../sass/cms-component.sass */
 .progress-striped .progress-bar, .progress-bar-striped {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -471,7 +472,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   background-size: 40px 40px;
 }
 
-/* line 361, ../sass/cms-component.sass */
+/* line 364, ../sass/cms-component.sass */
 .btn-upload-flash {
   width: 100%;
   height: 100%;
@@ -480,13 +481,13 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   cursor: pointer;
 }
 
-/* line 368, ../sass/cms-component.sass */
+/* line 371, ../sass/cms-component.sass */
 .btn-dash {
   cursor: pointer;
   border: 3px dashed #fff;
 }
 
-/* line 373, ../sass/cms-component.sass */
+/* line 376, ../sass/cms-component.sass */
 .title-func {
   position: relative;
   position: relative;
@@ -494,7 +495,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   z-index: 99;
   padding: 26px 0 17px;
 }
-/* line 379, ../sass/cms-component.sass */
+/* line 382, ../sass/cms-component.sass */
 .title-func h2 {
   float: left;
   font-weight: 500;
@@ -510,24 +511,24 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   right: 350px;
 }
 
-/* line 394, ../sass/cms-component.sass */
+/* line 397, ../sass/cms-component.sass */
 .intro {
   margin: 0 30px 0 0;
   font-size: 13px;
   height: 41px;
   line-height: 41px;
 }
-/* line 399, ../sass/cms-component.sass */
+/* line 402, ../sass/cms-component.sass */
 .intro span {
   float: left;
 }
 
-/* line 403, ../sass/cms-component.sass */
+/* line 406, ../sass/cms-component.sass */
 .upload-progress-wrap {
   margin-bottom: 1.5em;
   position: relative;
 }
-/* line 406, ../sass/cms-component.sass */
+/* line 409, ../sass/cms-component.sass */
 .upload-progress-wrap .progress {
   position: relative;
   height: 30px;
@@ -539,56 +540,56 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   width: calc(100% - 35px);
 }
-/* line 416, ../sass/cms-component.sass */
+/* line 419, ../sass/cms-component.sass */
 .upload-progress-wrap .progress-bar {
   line-height: 30px;
 }
-/* line 418, ../sass/cms-component.sass */
+/* line 421, ../sass/cms-component.sass */
 .upload-progress-wrap .overlay-button-close {
   right: 0;
   top: 4px;
 }
-/* line 422, ../sass/cms-component.sass */
+/* line 425, ../sass/cms-component.sass */
 .upload-progress-wrap.is-success .overlay-button-close {
   text-indent: 0;
   background-image: none;
   cursor: default;
 }
-/* line 426, ../sass/cms-component.sass */
+/* line 429, ../sass/cms-component.sass */
 .upload-progress-wrap.is-success .overlay-button-close:before {
   content: "✔";
   color: green;
   position: absolute;
 }
 
-/* line 433, ../sass/cms-component.sass */
+/* line 436, ../sass/cms-component.sass */
 .upload-video-btn {
   line-height: 40px;
   text-align: center;
   border-radius: 4px;
   margin-bottom: 1em;
 }
-/* line 442, ../sass/cms-component.sass */
+/* line 445, ../sass/cms-component.sass */
 .upload-video-btn:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
-/* line 444, ../sass/cms-component.sass */
+/* line 447, ../sass/cms-component.sass */
 .upload-video-btn .title {
   position: relative;
   line-height: 40px;
   vertical-align: middle;
 }
-/* line 448, ../sass/cms-component.sass */
+/* line 451, ../sass/cms-component.sass */
 .upload-video-btn .title img {
   vertical-align: middle;
   transform: scale(0.7);
 }
 
-/* line 465, ../sass/cms-component.sass */
+/* line 468, ../sass/cms-component.sass */
 .edit-episode-infomation .overlay-h316-center {
   padding: 24px 10px 0px;
 }
-/* line 468, ../sass/cms-component.sass */
+/* line 471, ../sass/cms-component.sass */
 .edit-episode-infomation .thumb-wrap {
   width: 25%;
   float: left;
@@ -598,47 +599,47 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   max-height: 165px;
   overflow: hidden;
 }
-/* line 478, ../sass/cms-component.sass */
+/* line 481, ../sass/cms-component.sass */
 .edit-episode-infomation .thumb-wrap:hover .thumb-hover-wrap {
   background-color: rgba(0, 0, 0, 0.6);
   color: white;
 }
-/* line 482, ../sass/cms-component.sass */
+/* line 485, ../sass/cms-component.sass */
 .edit-episode-infomation .img-wrap {
   background-color: #fff;
   width: 100%;
   padding: 5px;
   box-sizing: border-box;
 }
-/* line 487, ../sass/cms-component.sass */
+/* line 490, ../sass/cms-component.sass */
 .edit-episode-infomation .img-wrap img {
   width: 100%;
 }
-/* line 489, ../sass/cms-component.sass */
+/* line 492, ../sass/cms-component.sass */
 .edit-episode-infomation .form-group {
   margin-bottom: 1em;
   padding-left: 0.5em;
 }
-/* line 492, ../sass/cms-component.sass */
+/* line 495, ../sass/cms-component.sass */
 .edit-episode-infomation .form-wrap {
   width: 70%;
   float: left;
 }
-/* line 495, ../sass/cms-component.sass */
+/* line 498, ../sass/cms-component.sass */
 .edit-episode-infomation .form-elements {
   margin-left: 1em;
   width: 100%;
 }
-/* line 498, ../sass/cms-component.sass */
+/* line 501, ../sass/cms-component.sass */
 .edit-episode-infomation .form-elements textarea, .edit-episode-infomation .form-elements input[type="text"] {
   width: 100%;
 }
-/* line 500, ../sass/cms-component.sass */
+/* line 503, ../sass/cms-component.sass */
 .edit-episode-infomation .form-label {
   padding-left: 1.2em;
   text-align: left;
 }
-/* line 503, ../sass/cms-component.sass */
+/* line 506, ../sass/cms-component.sass */
 .edit-episode-infomation .thumb-hover-wrap {
   font-size: 0.75rem;
   position: absolute;
@@ -650,7 +651,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   background: transparent url("../images/baenner-upload.gif") no-repeat 8px 6px;
   transition: all 0.5s ease;
 }
-/* line 513, ../sass/cms-component.sass */
+/* line 516, ../sass/cms-component.sass */
 .edit-episode-infomation .notice {
   color: #f00;
   font-size: 13px;
@@ -658,22 +659,22 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   margin-bottom: 5px;
 }
 
-/* line 519, ../sass/cms-component.sass */
+/* line 522, ../sass/cms-component.sass */
 .is-right {
   float: right;
 }
 
-/* line 522, ../sass/cms-component.sass */
+/* line 525, ../sass/cms-component.sass */
 .fminput {
   position: relative;
 }
 
-/* line 525, ../sass/cms-component.sass */
+/* line 528, ../sass/cms-component.sass */
 .input-gray {
   height: auto;
 }
 
-/* line 531, ../sass/cms-component.sass */
+/* line 534, ../sass/cms-component.sass */
 .form-control.input-gray {
   font-size: 14px;
   color: #555;
@@ -696,16 +697,16 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
-/* line 546, ../sass/cms-component.sass */
+/* line 549, ../sass/cms-component.sass */
 .form-control.input-gray.with-left-icon {
   padding: 4px 24px 4px 8px;
 }
-/* line 549, ../sass/cms-component.sass */
+/* line 552, ../sass/cms-component.sass */
 .form-control.input-gray + .select-btn {
   right: 12px;
 }
 
-/* line 553, ../sass/cms-component.sass */
+/* line 556, ../sass/cms-component.sass */
 .style-select {
   float: left;
   width: 100px;
@@ -713,7 +714,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-radius: 2px;
   position: relative;
 }
-/* line 559, ../sass/cms-component.sass */
+/* line 562, ../sass/cms-component.sass */
 .style-select:after {
   content: "";
   display: block;
@@ -728,11 +729,11 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   -moz-pointer-events: none;
   pointer-events: none;
 }
-/* line 574, ../sass/cms-component.sass */
+/* line 577, ../sass/cms-component.sass */
 .style-select:hover:after {
   background-position: 0 -451px;
 }
-/* line 578, ../sass/cms-component.sass */
+/* line 581, ../sass/cms-component.sass */
 .style-select select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -741,7 +742,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   width: 120px;
 }
 
-/* line 593, ../sass/cms-component.sass */
+/* line 596, ../sass/cms-component.sass */
 .edit-icon {
   background-image: url("../images/btns.png");
   background-position: 0 -1060px;
@@ -755,22 +756,22 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   z-index: 55;
 }
 
-/* line 604, ../sass/cms-component.sass */
+/* line 607, ../sass/cms-component.sass */
 .edit-icon:hover, .edit-icon.on {
   background-position: -23px -1060px;
 }
 
-/* line 609, ../sass/cms-component.sass */
+/* line 612, ../sass/cms-component.sass */
 .fminput .charcounter {
   position: absolute;
   white-space: nowrap;
 }
 
-/* line 615, ../sass/cms-component.sass */
+/* line 618, ../sass/cms-component.sass */
 .fmfield {
   position: relative;
 }
-/* line 617, ../sass/cms-component.sass */
+/* line 620, ../sass/cms-component.sass */
 .fmfield .select {
   position: relative;
   float: left;
@@ -780,12 +781,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   padding-left: 3px;
   background: url(../images/input_white.png) no-repeat 0 0;
 }
-/* line 625, ../sass/cms-component.sass */
+/* line 628, ../sass/cms-component.sass */
 .fmfield .select.disabled {
   background-position: 0 -90px;
   opacity: 0.7;
 }
-/* line 628, ../sass/cms-component.sass */
+/* line 631, ../sass/cms-component.sass */
 .fmfield .select-btn {
   padding: 0;
   width: 22px;
@@ -797,11 +798,11 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   cursor: pointer;
   background: url(../images/btns.png) no-repeat 0 -400px;
 }
-/* line 638, ../sass/cms-component.sass */
+/* line 641, ../sass/cms-component.sass */
 .fmfield .select-btn:hover {
   background-position: 0 -451px;
 }
-/* line 643, ../sass/cms-component.sass */
+/* line 646, ../sass/cms-component.sass */
 .fmfield .select-txt {
   overflow: hidden;
   height: 30px;
@@ -813,7 +814,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   text-overflow: ellipsis;
   background: url(../images/input_white.png) no-repeat right -30px;
 }
-/* line 655, ../sass/cms-component.sass */
+/* line 658, ../sass/cms-component.sass */
 .fmfield .select-txt a {
   display: block;
   height: 30px;
@@ -822,7 +823,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   text-decoration: none !important;
   background: url(../images/input_white.png) repeat-x 0 -60px;
 }
-/* line 662, ../sass/cms-component.sass */
+/* line 665, ../sass/cms-component.sass */
 .fmfield .select-list {
   position: absolute;
   top: 27px;
@@ -834,7 +835,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-radius: 0 0 5px 5px;
   opacity: 0.9;
 }
-/* line 674, ../sass/cms-component.sass */
+/* line 677, ../sass/cms-component.sass */
 .fmfield .select-list li {
   width: 162px;
   height: 28px;
@@ -849,32 +850,32 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   line-height: 28px;
   cursor: pointer;
 }
-/* line 687, ../sass/cms-component.sass */
+/* line 690, ../sass/cms-component.sass */
 .fmfield .select-list li:first-child {
   border-top: none;
 }
-/* line 689, ../sass/cms-component.sass */
+/* line 692, ../sass/cms-component.sass */
 .fmfield .select-list li:hover {
   background-color: #e4e4e4;
   color: #999;
 }
-/* line 693, ../sass/cms-component.sass */
+/* line 696, ../sass/cms-component.sass */
 .fmfield .disabled .select-btn {
   background-position: 0 -501px;
   cursor: default;
 }
-/* line 697, ../sass/cms-component.sass */
+/* line 700, ../sass/cms-component.sass */
 .fmfield .disabled .select-txt {
   background-position: right -120px;
 }
-/* line 700, ../sass/cms-component.sass */
+/* line 703, ../sass/cms-component.sass */
 .fmfield .disabled .select-txt a {
   background-position: 0 -150px;
   cursor: default;
   color: #999 !important;
 }
 
-/* line 706, ../sass/cms-component.sass */
+/* line 709, ../sass/cms-component.sass */
 .fminput label {
   float: left;
   width: 140px;
@@ -884,7 +885,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   font-size: 13px;
 }
 
-/* line 715, ../sass/cms-component.sass */
+/* line 718, ../sass/cms-component.sass */
 .badge {
   z-index: 10;
   bottom: 7px;
@@ -903,19 +904,70 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-radius: 5px;
   box-sizing: border-box;
 }
-/* line 733, ../sass/cms-component.sass */
+/* line 736, ../sass/cms-component.sass */
 .badge.danger {
   background-color: #ef4913;
 }
-/* line 735, ../sass/cms-component.sass */
+/* line 738, ../sass/cms-component.sass */
 .badge.outline {
   background-color: transparent;
   border: #777 1px solid;
   color: #777;
 }
 
-/* line 739, ../sass/cms-component.sass */
+/* line 742, ../sass/cms-component.sass */
 .badge-list {
   margin-top: -1.5em;
   margin-bottom: 1em;
+}
+
+/* line 748, ../sass/cms-component.sass */
+.thumbnail {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  padding: 8px 7px 6px;
+  background-color: #fff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3), 0 0 4px rgba(255, 255, 255, 0.3) inset;
+  text-align: center;
+}
+
+/* line 759, ../sass/cms-component.sass */
+.thumbnail .img-wrap {
+  position: relative;
+  overflow: hidden;
+  width: 62px;
+  height: 62px;
+}
+/* line 764, ../sass/cms-component.sass */
+.thumbnail .loading {
+  display: none;
+  position: absolute;
+  top: 8px;
+  left: 7px;
+  width: 62px;
+  height: 62px;
+}
+
+/* line 771, ../sass/cms-component.sass */
+.img-wrap {
+  background-color: #aaa;
+  width: 100% !important;
+  height: 100% !important;
+  background-image: url("../images/thumbnail_icon.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
+/* line 781, ../sass/cms-component.sass */
+.img-wrap.no-image {
+  background-image: url("../images/thumbnail_icon.png") !important;
+  background-size: auto;
+}
+/* line 784, ../sass/cms-component.sass */
+.img-wrap.is-loading {
+  background-image: url("../images/loading.gif") !important;
+  background-size: auto;
 }
